--- a/css/colors.css
+++ b/css/colors.css
@@ -7,6 +7,12 @@
 .text-danger{
   color: rgb(255,19,130) !important;
 }
+.border-danger{
+  color: rgb(255,19,130) !important;
+}
 .btn-danger{
   background-color: rgb(255,19,130);
+}
+.btn-dark{
+  background-color: rgb(10,16,33) !important;
 }
